# wzp

./: .gitignore  .gitmodules  Cargo.toml  README.md  notes
.cargo/: config.toml
.gitea/workflows/: build.yml  mirror-github.yml
android/: .gitignore  gradlew  settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/wzp/: WzpApplication.kt
android/app/src/main/java/com/wzp/audio/: AudioPipeline.kt  AudioRouteManager.kt
android/app/src/main/java/com/wzp/data/: SettingsRepository.kt
android/app/src/main/java/com/wzp/debug/: DebugReporter.kt
android/app/src/main/java/com/wzp/engine/: CallStats.kt  SignalManager.kt  WzpCallback.kt  WzpEngine.kt
android/app/src/main/java/com/wzp/net/: NetworkMonitor.kt  RelayPinger.kt
android/app/src/main/java/com/wzp/service/: CallService.kt
android/app/src/main/java/com/wzp/ui/call/: CallActivity.kt  CallViewModel.kt  InCallScreen.kt
android/app/src/main/java/com/wzp/ui/components/: Identicon.kt
android/app/src/main/java/com/wzp/ui/settings/: SettingsScreen.kt
android/app/src/main/res/xml/: file_paths.xml
crates/wzp-android/: Cargo.toml  build.rs
crates/wzp-android/cpp/: getauxval_fix.c  oboe_bridge.cpp
crates/wzp-android/src/: audio_android.rs  audio_ring.rs  commands.rs  engine.rs  jni_bridge.rs  lib.rs  pipeline.rs  signal_mgr.rs  stats.rs
crates/wzp-client/: Cargo.toml
crates/wzp-client/src/: analyzer.rs  audio_io.rs  audio_linux_aec.rs  audio_ring.rs  audio_vpio.rs  audio_wasapi.rs  bench.rs  bench_cli.rs  call.rs  cli.rs  drift_test.rs  dual_path.rs  echo_test.rs  featherchat.rs  handshake.rs  lib.rs  metrics.rs  reflect.rs  sweep.rs
crates/wzp-client/tests/: dual_path.rs  handshake_integration.rs  long_session.rs
crates/wzp-codec/: Cargo.toml
crates/wzp-codec/src/: adaptive.rs  aec.rs  agc.rs  codec2_dec.rs  codec2_enc.rs  denoise.rs  dred_ffi.rs  lib.rs  opus_dec.rs  opus_enc.rs  resample.rs  silence.rs
crates/wzp-crypto/: Cargo.toml
crates/wzp-crypto/src/: anti_replay.rs  handshake.rs  identity.rs  lib.rs  nonce.rs  rekey.rs  session.rs
crates/wzp-crypto/tests/: featherchat_compat.rs
crates/wzp-fec/: Cargo.toml
crates/wzp-fec/src/: adaptive.rs  block_manager.rs  decoder.rs  encoder.rs  interleave.rs  lib.rs
crates/wzp-native/: Cargo.toml  build.rs
crates/wzp-native/cpp/: oboe_bridge.cpp  oboe_bridge.h
crates/wzp-native/src/: lib.rs
crates/wzp-proto/: Cargo.toml
crates/wzp-proto/src/: bandwidth.rs  codec_id.rs  dred_tuner.rs  error.rs  jitter.rs  lib.rs  packet.rs  quality.rs  session.rs  traits.rs
crates/wzp-relay/: Cargo.toml  build.rs
crates/wzp-relay/src/: auth.rs  call_registry.rs  config.rs  event_log.rs  federation.rs  handshake.rs  lib.rs  main.rs  metrics.rs  pipeline.rs  presence.rs  probe.rs  relay_link.rs  room.rs  route.rs  session_mgr.rs  signal_hub.rs  trunk.rs  ws.rs
crates/wzp-relay/tests/: cross_relay_direct_call.rs  federation.rs  handshake_integration.rs  hole_punching.rs  multi_reflect.rs  reflect.rs
crates/wzp-transport/: Cargo.toml
crates/wzp-transport/src/: config.rs  connection.rs  datagram.rs  lib.rs  path_monitor.rs  quic.rs  reliable.rs
crates/wzp-wasm/: Cargo.toml
crates/wzp-wasm/src/: lib.rs
crates/wzp-web/: Cargo.toml
crates/wzp-web/src/: main.rs  metrics.rs
crates/wzp-web/static/: audio-processor.js  index.html  playback-processor.js
crates/wzp-web/static/js/: wzp-core.js  wzp-full.js  wzp-hybrid.js  wzp-pure.js
crates/wzp-web/static/wasm/: .gitignore  package.json  wzp_wasm.d.ts  wzp_wasm.js  wzp_wasm_bg.wasm  wzp_wasm_bg.wasm.d.ts
debug/: INCIDENT-2026-04-06-art-gc-sigbus.md  INCIDENT-2026-04-06-capture-thread-use-after-free.md  INCIDENT-2026-04-06-playout-ring-desync.md  INCIDENT-2026-04-06-send-task-crash.md
desktop/: index.html  package-lock.json  package.json  tsconfig.json
desktop/src/: identicon.ts  main.ts  style.css
desktop/src-tauri/: Cargo.toml  Info.plist  build.rs  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/cpp/: cpp_smoke.c  cpp_smoke.cpp  getauxval_fix.c  hello.c  hello2.c  oboe_bridge.h  oboe_stub.cpp  pthread_shim.c
desktop/src-tauri/src/: android_audio.rs  engine.rs  history.rs  lib.rs  main.rs  oboe_audio.rs  wzp_native.rs
docs/: ADMINISTRATION.md  API.md  ARCHITECTURE.md  BRANCH-android-rewrite.md  BRANCH-desktop-audio-rewrite.md  DESIGN.md  EXTENSIBILITY.md  FEATHERCHAT_INTEGRATION.md  INTEGRATION_TASKS.md  PRD-adaptive-quality.md  PRD-bluetooth-audio.md  PRD-coordinated-codec.md  PRD-delegated-trust.md  PRD-desktop-direct-calling.md  PRD-dred-integration.md  PRD-engine-dedup.md  PRD-local-recording.md  PRD-mtu-discovery.md  PRD-network-awareness.md  PRD-p2p-direct.md  PRD-protocol-analyzer.md  PRD-relay-concurrency.md  PRD-relay-federation.md  PRD-studio-quality.md  PROGRESS.md  REFACTOR-codebase-audit.md  REFACTOR-relay-concurrency.md  TELEMETRY.md  USAGE.md  USER_GUIDE.md  WEB_VARIANTS.md  WS_RELAY_SPEC.md  WZP-FC-SHARED-CRATES.md  featherchat.md  grafana-dashboard.json  incident-tauri-android-init-tcb.md
docs/android/: README.md  architecture.md  build-guide.md  debugging.md  fix-audio-ring-desync.md  fix-capture-thread-crash.md  maintenance.md  roadmap.md
issues/: 001-libc++-shared-crash.md
scripts/: Dockerfile.android-builder  Dockerfile.linux-desktop-builder  Dockerfile.windows-builder  build-and-notify.sh  build-and-notify.sh.old  build-android-cloud.sh  build-android-docker.sh  build-android.sh  build-linux-desktop-docker.sh  build-linux-docker.sh  build-linux-notify.sh  build-linux.sh  build-tauri-android.sh  build-windows-cloud.sh  build-windows-docker.sh  build.sh  cleanup-builder.sh  federation-test.sh  mint-tmux.sh  prep-linux-mint.sh
tools/: logcat-server.py
