[workspace]
resolver = "2"
members = [
    "crates/wzp-proto",
    "crates/wzp-codec",
    "crates/wzp-fec",
    "crates/wzp-crypto",
    "crates/wzp-transport",
    "crates/wzp-relay",
    "crates/wzp-client",
    "crates/wzp-web",
    "crates/wzp-android",
    "crates/wzp-native",
    "desktop/src-tauri",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
rust-version = "1.85"

[workspace.dependencies]
# Shared
bytes = "1"
thiserror = "2"
async-trait = "0.1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
serde = { version = "1", features = ["derive"] }

# Transport
quinn = "0.11"

# FEC
raptorq = "2"

# Codec
audiopus = "0.3.0-rc.0"
codec2 = "0.3"

# Crypto
x25519-dalek = { version = "2", features = ["static_secrets"] }
ed25519-dalek = { version = "2", features = ["rand_core", "pkcs8"] }
chacha20poly1305 = "0.10"
hkdf = "0.12"
sha2 = "0.10"
rand = "0.8"

# Workspace crates
wzp-proto = { path = "crates/wzp-proto" }
wzp-codec = { path = "crates/wzp-codec" }
wzp-fec = { path = "crates/wzp-fec" }
wzp-crypto = { path = "crates/wzp-crypto" }
wzp-transport = { path = "crates/wzp-transport" }
wzp-client = { path = "crates/wzp-client" }

# Fast dev profile: optimized but with debug info and incremental compilation.
# Use with: cargo run --profile dev-fast
[profile.dev-fast]
inherits = "dev"
opt-level = 2

# Optimize heavy compute deps even in debug builds —
# real-time audio needs < 20ms per frame, impossible unoptimized.
[profile.dev.package.nnnoiseless]
opt-level = 3
[profile.dev.package.audiopus_sys]
opt-level = 3
[profile.dev.package.audiopus]
opt-level = 3
[profile.dev.package.raptorq]
opt-level = 3
[profile.dev.package.wzp-codec]
opt-level = 3
[profile.dev.package.wzp-fec]
opt-level = 3

# Vendored audiopus_sys with a patched opus/CMakeLists.txt that distinguishes
# real cl.exe (MSVC) from clang-cl (used by cargo-xwin for Windows cross-
# compiles). Upstream libopus 1.3.1 gates its `-msse4.1` per-file compile
# flags on `if(NOT MSVC)`, which is false under clang-cl because CMake sets
# MSVC=1 for both compilers — resulting in SSE4.1 source files compiled
# without the required target feature and hard failures in silk/NSQ_sse4_1.c.
# The vendored copy introduces an `MSVC_CL` var (true only for real cl.exe)
# and flips the SIMD guards to use it, restoring per-file SIMD flags for
# clang-cl. See vendor/audiopus_sys/opus/CMakeLists.txt for the full diff
# and rationale, plus xiph/opus#256 / xiph/opus PR #257 upstream.
[patch.crates-io]
audiopus_sys = { path = "vendor/audiopus_sys" }
