[package]
name = "wzp-codec"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "WarzonePhone audio codec layer — Opus + Codec2 encoding/decoding"

[dependencies]
wzp-proto = { workspace = true }
tracing = { workspace = true }

# Opus bindings
audiopus = { workspace = true }

# Pure-Rust Codec2 implementation
codec2 = { workspace = true }

# RNG for comfort noise generation
rand = { workspace = true }

# ML-based noise suppression (pure-Rust port of RNNoise)
nnnoiseless = "0.5"

[dev-dependencies]
