[package]
name = "wzp-crypto"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "WarzonePhone crypto layer — X25519 + ChaCha20-Poly1305, Warzone identity compatible"

[dependencies]
wzp-proto = { workspace = true }
x25519-dalek = { workspace = true }
ed25519-dalek = { workspace = true }
chacha20poly1305 = { workspace = true }
hkdf = { workspace = true }
sha2 = { workspace = true }
rand = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
