[package]
name = "wzp-crypto"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "WarzonePhone crypto layer — X25519 + ChaCha20-Poly1305, Warzone identity compatible"

[dependencies]
wzp-proto = { workspace = true }
x25519-dalek = { workspace = true }
ed25519-dalek = { workspace = true }
chacha20poly1305 = { workspace = true }
hkdf = { workspace = true }
sha2 = { workspace = true }
rand = { workspace = true }
tracing = { workspace = true }
bip39 = "2"
hex = "0.4"

# featherChat identity — the source of truth for Seed, IdentityKeyPair, Fingerprint
warzone-protocol = { path = "../../deps/featherchat/warzone/crates/warzone-protocol" }

[dev-dependencies]
ed25519-dalek = { workspace = true }
warzone-protocol = { path = "../../deps/featherchat/warzone/crates/warzone-protocol" }
wzp-proto = { workspace = true }
wzp-client = { path = "../wzp-client" }
wzp-relay = { path = "../wzp-relay" }
serde_json = "1"
serde = { workspace = true }
bincode = "1"
