[package]
name = "wzp-proto"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "WarzonePhone protocol types, traits, and core logic"

[dependencies]
bytes = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
