[package]
name = "wzp-relay"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "WarzonePhone relay daemon — ties codec, FEC, crypto, and transport together"

[dependencies]
wzp-proto = { workspace = true }
wzp-codec = { workspace = true }
wzp-fec = { workspace = true }
wzp-crypto = { workspace = true }
wzp-transport = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
async-trait = { workspace = true }
bytes = { workspace = true }
serde = { workspace = true }
toml = "0.8"
anyhow = "1"
reqwest = { version = "0.12", features = ["json"] }
serde_json = "1"
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
quinn = { workspace = true }

[[bin]]
name = "wzp-relay"
path = "src/main.rs"

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
wzp-transport = { workspace = true }
wzp-client = { workspace = true }
