[package]
name = "wzp-transport"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "WarzonePhone transport layer — QUIC (quinn) with DATAGRAM frames"

[dependencies]
wzp-proto = { workspace = true }
quinn = { workspace = true }
tokio = { workspace = true }
bytes = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
serde_json = "1"
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
rcgen = "0.13"

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
