[package]
name = "wzp-desktop"
version = "0.1.0"
edition = "2024"
description = "WarzonePhone Desktop — encrypted VoIP client"
default-run = "wzp-desktop"

# Library target — required for Tauri mobile (Android/iOS link the app as a cdylib)
# and also used by the desktop binary below.
[lib]
name = "wzp_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "wzp-desktop"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }
# Step A: minimal cc addition — lets build.rs compile cpp/hello.c on Android.
# build-dependencies are resolved against the HOST, not the target, so this
# line is unconditional (the actual cc::Build call is gated on TARGET).
cc = "1"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1"
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }

# WarzonePhone crates — protocol layer is platform-independent
wzp-proto = { path = "../../crates/wzp-proto" }
wzp-codec = { path = "../../crates/wzp-codec" }
wzp-fec = { path = "../../crates/wzp-fec" }
wzp-crypto = { path = "../../crates/wzp-crypto" }
wzp-transport = { path = "../../crates/wzp-transport" }

# wzp-client pulls CPAL + (on macOS) VoiceProcessingIO — desktop only.
# Android gets an oboe/AAudio backend in Step 3 of the Tauri mobile rewrite.
[target.'cfg(not(target_os = "android"))'.dependencies]
wzp-client = { path = "../../crates/wzp-client", features = ["audio", "vpio"] }

# Step B: depend on wzp-client on Android WITHOUT the audio/vpio features,
# so we pull in only the platform-independent modules (call, handshake,
# audio_ring, codec bindings). Deliberately no imports in lib.rs yet — we
# only want to verify that compiling + linking these crates on android
# doesn't regress the working build.
[target.'cfg(target_os = "android")'.dependencies]
wzp-client = { path = "../../crates/wzp-client", default-features = false }

# Platform-specific
[target.'cfg(target_os = "macos")'.dependencies]
coreaudio-rs = "0.11"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
